--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -264,7 +264,7 @@ crossorigin=""/>
 		<table class="col-7 categorieifra" style="align-items: right;">
 	   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 		   <thead>
-		        <tr>
+		        <tr style="text-transform: uppercase;">
 		            <th>
 			            <span lang="fr">Catégorie</span>
 			        	<span lang="en">Category</span>
@@ -275,35 +275,35 @@ crossorigin=""/>
 			        </th>
 		        </tr>
 		   </thead>     
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>1</td>
 	            <td>
 	            	<span lang="fr">Produit pour les lèvres</span>
 	            	<span lang="en">Products applied to the lips</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0;">
 	            <td>2</td>
 	            <td>
 	            	<span lang="fr">Produits pour les aisselles</span>
 	            	<span lang="en">Products applied to the axillae</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0;">
 	            <td>3</td>
 	            <td>
 	            	<span lang="fr">Produits appliqués sur le visage et le coprs en utilisant le bout des doigts</span>
 	            	<span lang="en">Products applied to the face/body using fingertips</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0;">
 	            <td>4</td>
 	            <td>
 	            	<span lang="fr">Produits de Fine Fragrance</span>
 	            	<span lang="en">Products related to Fine Fragrance</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0;">
 	            <td>5</td>
 	            <td>
 	            	<span lang="fr">Produits appliqués sur le visage et le corps en utilisant la paume de la main, (produits sans rinçage)</span>
