--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -282,28 +282,28 @@ crossorigin=""/>
 	            	<span lang="en">Products applied to the lips</span>
 	            </td> 
 	        </tr>
-	        <tr style="background-color: #F1F0F0;">
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>2</td>
 	            <td>
 	            	<span lang="fr">Produits pour les aisselles</span>
 	            	<span lang="en">Products applied to the axillae</span>
 	            </td> 
 	        </tr>
-	        <tr style="background-color: #F1F0F0;">
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>3</td>
 	            <td>
 	            	<span lang="fr">Produits appliqués sur le visage et le coprs en utilisant le bout des doigts</span>
 	            	<span lang="en">Products applied to the face/body using fingertips</span>
 	            </td> 
 	        </tr>
-	        <tr style="background-color: #F1F0F0;">
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>4</td>
 	            <td>
 	            	<span lang="fr">Produits de Fine Fragrance</span>
 	            	<span lang="en">Products related to Fine Fragrance</span>
 	            </td> 
 	        </tr>
-	        <tr style="background-color: #F1F0F0;">
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>5</td>
 	            <td>
 	            	<span lang="fr">Produits appliqués sur le visage et le corps en utilisant la paume de la main, (produits sans rinçage)</span>
@@ -338,14 +338,14 @@ crossorigin=""/>
 	            	<span lang="en">Baby Creams, baby Oils and baby talc</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>6</td>
 	            <td>
 	            	<span lang="fr">Produits avec exposition orale et labiale</span>
 	            	<span lang="en">Products with oral and lip exposure</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>7</td>
 	            <td>
 	            	<span lang="fr">Produits appliqués sur les cheveux avec contact des mains</span>
@@ -366,21 +366,21 @@ crossorigin=""/>
 	            	<span lang="en">Leave-on products applied to the hair with some hand contact</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>8</td>
 	            <td>
 	            	<span lang="fr">Produits présentant une exposition anogénitale significative</span>
 	            	<span lang="en">Products with significant anogenital exposure</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>9</td>
 	            <td>
 	            	<span lang="fr">Produits appliqués sur le visage ou le corps (produits rinçés)</span>
 	            	<span lang="en">Products with body and hand exposure, primarily rinse off</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>10</td>
 	            <td>
 	            	<span lang="fr">Produits d'entretien ménager avec un contact main eventuel</span>
@@ -401,7 +401,7 @@ crossorigin=""/>
 	            	<span lang="en">Household aerosol/spray products</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>11</td>
 	            <td>
 	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte</span>
@@ -422,7 +422,7 @@ crossorigin=""/>
 	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate with potential UV exposure</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: #F1F0F0; font-weight: bold;">
 	            <td>12</td>
 	            <td>
 	            	<span lang="fr">Produits non destinés à un contact direct avec la peau, transfert minimal ou insignifiant sur la peau</span>
