--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -11,8 +11,8 @@
 <!-- Titre de la page -->   
 <title>ScenTree - IFRA</title>
 <!--Description Google-->
-<meta name="description" lang="fr" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dans vos parfums ? .. Venez découvrir les secrets de ces ingrédients souvent diabolisés. " />
-<meta name="description" lang="en" content="Linalool, Limonene, Eugenol, Benzyl Salicylate, so many chemical molecules in your perfumes ? ... Come and discover the secrets of these demonized ingredients." />
+<meta name="description" lang="fr" content="L’IFRA (International Fragrance Association) a pour objectif principal de représenter les intérêts et la voix de l’industrie des parfums à travers le monde. Venez découvert les coulisses de cette organisation si importante. " />
+<meta name="description" lang="en" content="IFRA (International Fragrance Association) has the primary objective of representing the interests and voice of the fragrance industry worldwide. Come and find out what goes on behind the scenes of this important organisation." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
