--- a/html/_/index.html
+++ b/html/_/index.html
@@ -405,7 +405,7 @@ crossorigin=""/>
 <div class="row">
 <div class="col-12">
 
-<p class="m-0">
+<p class="mb-0">
 	<h1 class="item d-inline text-size-16px" style="background-color: blue;" >
 		<span lang="fr"><b>Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b></span>
 		<span lang="en"><b>Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b></span>
@@ -413,7 +413,7 @@ crossorigin=""/>
 	<span id="modalbody-allergenes" class="textitem"></span>
 </p>
 
-<p class="logoifra m-0 text-size-11px">
+<p class="logoifra mt-0 text-size-11px">
 	<span lang="fr">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
 	<span lang="en">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a>
 </p>
