--- a/html/_/index.html
+++ b/html/_/index.html
@@ -411,9 +411,9 @@ crossorigin=""/>
 		<span lang="en"><b>Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b></span>
 	</h1>
 	<span id="modalbody-allergenes" class="textitem"></span>
-
-	<span lang="fr">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
-	<span lang="en">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a>
+	<br>
+	<span lang="fr" class="text-size-11px">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
+	<span lang="en" class="text-size-11px">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a>
 </p>
 
 <h2 class="d-inline item text-size-16px"><span><b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b></h2>
