--- a/html/_/index.html
+++ b/html/_/index.html
@@ -413,115 +413,124 @@ crossorigin=""/>
 	<span id="modalbody-allergenes" class="textitem"></span>
 	<br>
 	<span lang="fr" class="text-size-11px">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
-	<span lang="en" class="text-size-11px">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a>
+	<span lang="en" class="text-size-11px">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a></span>
 </p>
 
-<h2 class="d-inline item text-size-16px"><span><b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b></h2>
+<p>
+	<h2 class="d-inline item text-size-16px">
+		<span lang="fr"><b>IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b></span>
+		<span lang="en"><b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b></span>
+	</h2>
+	<span id="modalbody-ifra" class="textitem"></span>
+	<br>
 
-  <span id="modalbody-ifra" class="textitem"></span></span>
-  <br>
+	<div class="container-fluid">
+	<div class="row">
+	<div class="col-12">
+		<div class="blockifra1">
+		  <h2 class="amendment d-inline text-size-14px">
+		  	<span lang="fr"><b>Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b></span>
+		  	<span lang="en"><b>Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b></span>
+		  </h2>
+		  <span id="modalbody-amendment" class="textitem"></span>
+		  <br>
+		  <h2 class="commentaires d-inline text-size-14px">
+		  	<span lang="fr"><b>Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b></span>
+		  	<span lang="en"><b>Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b></span>
+		  </h2>
+		    <span id="modalbody-commentifra" class="textitem"></span>
+		</div>
 
-<div class="container-fluid">
-<div class="row">
-<div class="col-12">
-<div class="blockifra1">
-  <h2 class="amendment d-inline text-size-14px"><span><b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b></h2>
-  <span id="modalbody-amendment" class="textitem"></span></span>
-  <br>
-  <h2 class="commentaires d-inline text-size-14px"><span><b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b></h2>
-    <span id="modalbody-commentifra" class="textitem"></span></span>
-</div>
+		<div class="blocktable">
+		  <div class="table-responsive text-center"><table class="table1">
+		    <!-- TITRE DU TABLEAU-->
+		    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
+		    <!-- EN-TETE DU TABLEAU-->
+		    <tr>
+		      <th>Cat.1</th>
+		      <th>Cat.2</th>
+		      <th>Cat.3</th>
+		      <th>Cat.4</th>
+		      <th>Cat.5</th>
+		      <th>Cat.6</th>
+		      <th>Cat.7</th>
+		      <th>Cat.8</th>
+		      <th>Cat.9</th>
+		      <th>Cat.10</th>
+		      <th>Cat.11</th>
+		    </tr>
+		    <!-- CORPS DU TABLEAU-->
+		    <tr>
+		      <td><span id="modalbody-cat1"></span> %</td>
+		      <td><span id="modalbody-cat2"></span> %</td>
+		      <td><span id="modalbody-cat3"></span> %</td>
+		      <td><span id="modalbody-cat4"></span> %</td>
+		      <td><span id="modalbody-cat5"></span> %</td>
+		      <td><span id="modalbody-cat6"></span> %</td>
+		      <td><span id="modalbody-cat7"></span> %</td>
+		      <td><span id="modalbody-cat8"></span> %</td>
+		      <td><span id="modalbody-cat9"></span> %</td>
+		      <td><span id="modalbody-cat10"></span> %</td>
+		      <td><span lang="fr">Non restreint</span><span lang="en">Not Restricted</span></td>
+		    </tr>
+		  </table>
+		  
+		  <table class="table2">
+		    <!-- TITRE DU TABLEAU-->
+		    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
+		    <!-- EN-TETE DU TABLEAU-->
+		    <tr>
+		      <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
+		      <th rowspan="2"><span lang="fr">Sans contact avec la peau</span><span lang="en">Non skin contact products </span></th>
+		    </tr>
+		    <!-- CORPS DU TABLEAU-->
+		    <tr>
+		      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
+		      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
+		    </tr>
+		    <tr>
+		      <td><span id="modalbody-leaveon"></span> %</td>
+		      <td>X</td>
+		      <td>X</td>
+		    </tr>
+		  </table>
+		  
+		  <table class="table3">
+		    <!-- TITRE DU TABLEAU-->
+		    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
+		    <!-- EN-TETE DU TABLEAU-->
+		    <tr>
+		      <th><span lang="fr">Fine fragrance</span><span lang="en">Fine fragrance</span></th>
+		      <th><span lang="fr">Eau de toilette</span><span lang="en">Eau de toilette</span></th>
+		      <th><span lang="fr">Crème parfumée</span><span lang="en">Fragrancing cream</span></th>
+		      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
+		      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
+		      <th><span lang="fr">Possible contact dermique accidentel</span><span lang="en">Non-skin, incidental skin contact </span></th> 
+		    </tr>
+		    <!-- CORPS DU TABLEAU-->
+		    <tr>
+		      <td>%</td>
+		      <td>%</td>
+		      <td>%</td>
+		      <td>%</td>
+		      <td>%</td>
+		      <td>%</td>
+		    </tr>
+		  </table></div>
+		  <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span> </p>
 
-<div class="blocktable">
-  <div class="table-responsive text-center"><table class="table1">
-    <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
-    <!-- EN-TETE DU TABLEAU-->
-    <tr>
-      <th>Cat.1</th>
-      <th>Cat.2</th>
-      <th>Cat.3</th>
-      <th>Cat.4</th>
-      <th>Cat.5</th>
-      <th>Cat.6</th>
-      <th>Cat.7</th>
-      <th>Cat.8</th>
-      <th>Cat.9</th>
-      <th>Cat.10</th>
-      <th>Cat.11</th>
-    </tr>
-    <!-- CORPS DU TABLEAU-->
-    <tr>
-      <td><span id="modalbody-cat1"></span> %</td>
-      <td><span id="modalbody-cat2"></span> %</td>
-      <td><span id="modalbody-cat3"></span> %</td>
-      <td><span id="modalbody-cat4"></span> %</td>
-      <td><span id="modalbody-cat5"></span> %</td>
-      <td><span id="modalbody-cat6"></span> %</td>
-      <td><span id="modalbody-cat7"></span> %</td>
-      <td><span id="modalbody-cat8"></span> %</td>
-      <td><span id="modalbody-cat9"></span> %</td>
-      <td><span id="modalbody-cat10"></span> %</td>
-      <td><span lang="fr">Non restreint</span><span lang="en">Not Restricted</span></td>
-    </tr>
-  </table>
-  
-  <table class="table2">
-    <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
-    <!-- EN-TETE DU TABLEAU-->
-    <tr>
-      <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
-      <th rowspan="2"><span lang="fr">Sans contact avec la peau</span><span lang="en">Non skin contact products </span></th>
-    </tr>
-    <!-- CORPS DU TABLEAU-->
-    <tr>
-      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
-      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
-    </tr>
-    <tr>
-      <td><span id="modalbody-leaveon"></span> %</td>
-      <td>X</td>
-      <td>X</td>
-    </tr>
-  </table>
-  
-  <table class="table3">
-    <!-- TITRE DU TABLEAU-->
-    <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
-    <!-- EN-TETE DU TABLEAU-->
-    <tr>
-      <th><span lang="fr">Fine fragrance</span><span lang="en">Fine fragrance</span></th>
-      <th><span lang="fr">Eau de toilette</span><span lang="en">Eau de toilette</span></th>
-      <th><span lang="fr">Crème parfumée</span><span lang="en">Fragrancing cream</span></th>
-      <th><span lang="fr">Produits non rincés</span><span lang="en">Leave on products</span></th>
-      <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
-      <th><span lang="fr">Possible contact dermique accidentel</span><span lang="en">Non-skin, incidental skin contact </span></th> 
-    </tr>
-    <!-- CORPS DU TABLEAU-->
-    <tr>
-      <td>%</td>
-      <td>%</td>
-      <td>%</td>
-      <td>%</td>
-      <td>%</td>
-      <td>%</td>
-    </tr>
-  </table></div>
-  <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span> </p>
-
-  <p class="logoifra mb-0 text-size-11px">
-  	<span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
-  	<span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
-  	<br>
-  	<span lang="fr">Pour en savoir plus sur l'IFRA, ses objectifs et ses actions, cliquez <a href="../_/IFRA.html" target="_blank">ici</a></span>
-	<span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a href="../_/IFRA.html" target="_blank">here</a></span>
-  </p>
-</div>
-</div>
-</div>
-</div>
-
+		  <p class="logoifra mb-0 text-size-11px">
+		  	<span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
+		  	<span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
+		  	<br>
+		  	<span lang="fr">Pour en savoir plus sur l'IFRA, ses objectifs et ses actions, cliquez <a href="../_/IFRA.html" target="_blank">ici</a></span>
+			<span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a href="../_/IFRA.html" target="_blank">here</a></span>
+		  </p>
+		</div>
+	</div>
+	</div>
+	</div>
+</p>
 
 </div>    
 </div>   
