--- a/html/_/index.html
+++ b/html/_/index.html
@@ -183,109 +183,41 @@ crossorigin=""/>
 
 
 
-<!--MODAL LISTE MP-->   
-<div class="modal" tabindex="-1" role="dialog" id="listeMP">
-<div class="modal-dialog modal-lg" role="document">
-<div class="modal-content">
- 
-<div class="modal-header d-block">
-  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="text-center modal-title modal-title1"><span lang="fr">Les ingrédients du ScenTree</span><span lang="en">List of ingredients</span></h4>
-</div>
-
-<div class="modal-body text-size-14px text-justify scrollbar-inside2">
-  
-<div class="row">
-<div class="col-lg-6 text-center">
-  <span lang="fr"><b><u>Ingrédients Naturels :</u></b></span>
-  <span lang="en"><b><u>Naturals :</u></b></span>
-  <ul id="listeMP-Ingredients-naturels"></ul>
-</div>
-<div class="col-lg-6 text-center">
-  <span lang="fr"><b><u>Ingrédients Synthétiques :</u></b></span>
-  <span lang="en"><b><u>Synthetics :</u></b></span>
-  <ul id="listeMP-Ingredients-synthetiques"></ul>
-</div>
-</div>
-
-</div>
-
-</div>
-</div>
-</div>
-
-
-<!--MODAL LISTE FAMILLE-->
-<div class="modal" tabindex="-1" role="dialog" id="Listefamilles">
-<div class="modal-dialog modal-lg" role="document">
-<div class="modal-content">
- 
-<div class="modal-header d-block">
-  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="text-center  modal-title modal-title1"><span lang="fr">Les familles et descripteurs olfactifs du ScenTree</span><span lang="en">Olfactive families and descriptions of Scentree </span></h4>
-</div>
-
-<div class="modal-body text-size-14px text-justify scrollbar-inside2">
-<div class="container-fluid">
-  
-  <p lang="fr">Le projet <i>ScenTree</i> utilise un ensemble de familles et de descripteurs olfactifs pour classifier l'ensemble des matières premières disponibles sur le site. Les voici : </p>
-   <p lang="en"><i>Scentree</i> project is using a pool of olfactive families and descriptors to classify the whole raw materials available on the website. Find them below :</p>
-<div class="col-12" style="height: 10px;"></div>
-<div class="row">   
-<div class="col-lg-6 text-center">
-  <b><u><span lang="fr">Familles Principales :</span><span lang="en">Families : </span></u></b>
-  <ul id="Listefamilles-Familles-principales"></ul>
-</div>
-<div class="col-lg-6 text-center">
-  <b><u><span lang="fr">Descripteurs secondaires :</span><span lang="en">Descriptions : </span></u></b>
-  <ul id="Listefamilles-Descripteurs-secondaires"></ul>
-</div>
-</div>
-
-</div>
-</div>
-
-</div>
-</div>
-</div>
-
-
 
 <!-- MODAL DESCRIPTEURS -->
 <div class="modal fade" tabindex="-1" role="dialog" id="DescripteurModal">
-<div class="modal-dialog modal-lg" role="document">
-<div class="modal-content">
- 
-<div class="modal-header">
-<div class="container-fluid  d-inline-block">
-<div class="row">
-  <h1 class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
-    <span id="modaltitle2" class="modal-title modal-title1"></span>
-  </h1>
-  <h3 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
-    <span id="modalheader-type2" class="modalheader-type"></span>
-  </h3>
-</div>
-</div>
-<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-</div>
+	<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="container-fluid  d-inline-block">
+					<div class="row">
+					  <h1 class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
+					    <span id="modaltitle2" class="modal-title modal-title1"></span>
+					  </h1>
+					  <h3 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+					    <span id="modalheader-type2" class="modalheader-type"></span>
+					  </h3>
+					</div>
+				</div>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			</div>
 
-<div class="modal-body">
-<div class="container-fluid">
-<div class="row">         
-<div class="col-sm-12">
-  <p><span class="Commentaires"><span id="modalbody-comment2" class="textdescripteurs"></span></span></p>
-</div>
-</div> 
-</div> <!-- fin container -->
-</div> <!-- fin body -->
+		<div class="modal-body">
+			<div class="container-fluid">
+				<div class="row">         
+					<div class="col-sm-12">
+					  <p><span class="Commentaires"><span id="modalbody-comment2" class="textdescripteurs"></span></span></p>
+					</div>
+				</div> 
+			</div> <!-- fin container -->
+		</div> <!-- fin body -->
 
-<div class="modal-footer">
-  <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
-</div> <!-- fin footer -->
+		<div class="modal-footer">
+		  <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
+		</div> <!-- fin footer -->
 
-</div> <!-- fin content -->
-</div> <!-- fin container -->
+		</div> <!-- fin content -->
+	</div> <!-- fin container -->
 </div> <!-- fin Descripteurs --> 
 
 
@@ -297,22 +229,22 @@ crossorigin=""/>
   <!--modal header-->
 <div class="modal-header">
   <div class="container-fluid  d-inline-block">
-<div class="row">
-  <h1 class="col-12 col-md-6  font-weight-bold text-size-20px   text-center-before-md text-align-left-strictly-after-md">
-   <span id="modaltitle" class="modal-title "></span>
-  </h1>
-  <h3 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
-  <span id="modalheader-type" class="modalheader-type2"></span>
-  </h3>
-  <div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
-</div>
-</div>
-<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	<div class="row">
+		<h1 class="col-12 col-md-6 font-weight-bold text-size-20px   text-center-before-md text-align-left-strictly-after-md">
+	   		<span id="modaltitle" class="modal-title "></span>
+	  	</h1>
+	  	<h3 class="col-12 col-md-6 text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+	  		<span id="modalheader-type" class="modalheader-type2"></span>
+	  	</h3>
+	  	<div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
+	</div>
+  </div>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside"> 
   <!-- définissions des onglets -->
-<div class="panel-heading">
+<div class="panel-heading" style="background: blue;">
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
   <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation"><span lang="fr">Veuillez sélectionner une catégorie..</span><span lang="en">Please select a category..</span>
     
