--- a/html/_/index.html
+++ b/html/_/index.html
@@ -244,7 +244,7 @@ crossorigin=""/>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside"> 
   <!-- définissions des onglets -->
-<div class="panel-heading mt-0" style="background: blue;">
+<div class="panel-heading mt-0 p-0" style="background: blue;">
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
   <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation"><span lang="fr">Veuillez sélectionner une catégorie..</span><span lang="en">Please select a category..</span>
     
