--- a/html/_/index.html
+++ b/html/_/index.html
@@ -244,21 +244,23 @@ crossorigin=""/>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside"> 
   <!-- définissions des onglets -->
-<div class="panel-heading mt-0 p-0" style="background: blue;">
-<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation"><span lang="fr">Veuillez sélectionner une catégorie..</span><span lang="en">Please select a category..</span>
-    
-  </button>
-  
-  <h3 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
-  <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-fill nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
-    <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
-    <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
-    <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
-  </ul>
-  </h3>
-</nav>
+<div class="panel-heading m-0 p-0" style="background: blue;">
+	<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+		<!--mobile version-->
+	  <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation">
+	  	<span lang="fr">Veuillez sélectionner une catégorie..</span>
+	  	<span lang="en">Please select a category..</span>
+	  </button>
+	  	<!--Desktop version-->
+	  <h3 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
+	  <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-fill nav-justified  mx-auto" role="tablist">
+	    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1"><span lang="fr">Présentation Générale</span><span lang="en">General Presentation</span></a></li>
+	    <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2"><span lang="fr">Botanique Origine Extraction</span><span lang="en">Origins & Botany</span></a></li>
+	    <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3"><span lang="fr">Réglementation</span><span lang="en">Regulations</span></a></li>
+	    <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4"><span lang="fr">Autres Remarques</span><span lang="en">Other Comments</span></a></li>
+	  </ul>
+	  </h3>
+	</nav>
 </div>
 <!--contenu des onglets-->
 <div class="panel-body">
