--- a/html/_/index.html
+++ b/html/_/index.html
@@ -263,7 +263,7 @@ crossorigin=""/>
 	</nav>
 </div>
 <!--contenu des onglets-->
-<div class="panel-body">
+<div class="panel-body" style="background-color: yellow;">
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
