--- a/html/_/index.html
+++ b/html/_/index.html
@@ -242,7 +242,7 @@ crossorigin=""/>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside"> 
+<div class="modal-body text-size-14px text-justify"> 
   <!-- définissions des onglets -->
 <div class="panel-heading m-0 p-0" style="background: blue;">
 	<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -262,8 +262,9 @@ crossorigin=""/>
 	  </h3>
 	</nav>
 </div>
+<hr>
 <!--contenu des onglets-->
-<div class="panel-body" style="background-color: yellow;">
+<div class="panel-body scrollbar-inside" style="background-color: yellow;">
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
