--- a/html/_/index.html
+++ b/html/_/index.html
@@ -242,7 +242,7 @@ crossorigin=""/>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 
-<div class="modal-body text-size-14px text-justify"> 
+<div class="modal-body m-0 p-0 text-size-14px text-justify"> 
   <!-- définissions des onglets -->
 <div class="panel-heading m-0 p-0" style="background: blue;">
 	<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
