--- a/html/_/index.html
+++ b/html/_/index.html
@@ -268,38 +268,64 @@ crossorigin=""/>
   
   <!--Onglet présentation générale-->
 <div class="tab-pane fade show active" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
-<div class="container-fluid">
-<div class="row">
-<div class="col-xs-12 col-sm-12 col-lg-4  panelcontent" >
-  
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></h2>
-  <span id="modalbody-tenue" class="textitem"></span></span></p>
+	<div class="container-fluid">
+		<div class="row">
+			<!--1ère colonne-->
+		<div class="col-xs-12 col-sm-12 col-lg-4 panelcontent" >
+		  <p>
+		  	<h2 class="item d-inline text-size-16px">
+		  		<span lang="fr"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
+		  		<span lang="en"><b>Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></span>
+		  	</h2>
+		  	<span id="modalbody-tenue" class="textitem"></span>
+		  </p>
+		  <p>
+		  	<h2 class="item d-inline text-size-16px">
+		  		<span lang="fr"><b>Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b></span>
+		  		<span lang="en"><b>Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></span>
+		  	</h2>
+		  	<span id="modalbody-price" class="textitem"></span>
+		  </p>
+		  <p>
+		  	<h2 class="item d-inline text-size-16px">
+		  		<span lang="fr"><b>Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b></span>
+		  		<span lang="en"><b>Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></span>
+		  	</h2>
+		  	<br>
+		  	<div class="text-center">
+		  		<span id="modalbody-componat" class="textitem2"></span>
+		  	</div>
+		  </p>
+		</div>
+			<!--2ème colonne-->
+		<div class="col-xs-12 col-sm-12 col-lg-4 panelcontent">
+		  <p>
+		  	<h1 class="item d-inline text-size-16px">
+		  		<span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
+		  		<span lang="en"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+		  	</h1>
+		  	<span id="modalbody-cas" class="textitem"></span>
+		  </p>
+		  <p>
+		  	<h2 class="item d-inline text-size-16px">
+		  		<span lang="fr"><b>Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b></span>
+		  		<span lang="en"><b>Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b></span>
+		  	</h2>
+		  	<span id="modalbody-aspect" class="textitem"></span>
+		  </p>
+		  <p>
+		  	<h2 class="item d-inline text-size-16px">
+		  		<span lang="fr"><b>Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b></span>
+		  		<span lang="en"><b>Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></span>
+		  	</h2>
+			<span id="modalbody-stab" class="textitem"></span>
+		  </p>
+		</div>
+		<!-- Colonne Image-->
+		<div id="modalbody-pict" class="imgmp  col-xs-12 col-sm-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
 
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><b lang="en"> Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></h2>
-  <span id="modalbody-price" class="textitem"></span></span></p>
-
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><b lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></h2>
-  <br>
-  <div class="text-center"><span id="modalbody-componat" class="textitem2"></span></span></div></p>
-
-</div>
-<div class="col-xs-12 col-sm-12 col-lg-4  panelcontent">
-
-  <p><h1 class="item d-inline text-size-16px"><span><b lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b><b lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></h1>
-  <span id="modalbody-cas" class="textitem"></span></span></p>
-  
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b><b lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b></h2>
-  <span id="modalbody-aspect" class="textitem"></span></span></p>
-  
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</b><b lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</b></h2>
-<span id="modalbody-stab" class="textitem"></span></span></p>
-
-</div>
-
-<div id="modalbody-pict" class="imgmp  col-xs-12 col-sm-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
-
-</div>
-</div>
+		</div>
+	</div>
 </div>
 
 <!--Onglet Botanique-->
