--- a/html/_/index.html
+++ b/html/_/index.html
@@ -253,7 +253,7 @@ crossorigin=""/>
     </button>
       <!--Desktop version-->
     <h3 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
-      <ul id="ongletsnat" class="navbar-nav nav nav-tabs nav-fill mx-auto " role="tablist">
+      <ul id="ongletsnat" class="navbar-nav nav nav-tabs mx-auto " role="tablist">
         <li class="nav-item">
           <a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">
             <span lang="fr">Présentation Générale</span>
