--- a/html/_/index.html
+++ b/html/_/index.html
@@ -283,7 +283,7 @@ crossorigin=""/>
   </nav>
 </div>
 <!--contenu des onglets-->
-<div class="panel-body scrollbar-inside" style="background-color: yellow;">
+<div class="panel-body scrollbar-inside">
 <div class="tab-content">
   
   <!--Onglet présentation générale-->
