--- a/html/_/index.html
+++ b/html/_/index.html
@@ -245,7 +245,7 @@ crossorigin=""/>
 <div class="modal-body m-0 p-0 text-size-14px text-justify"> 
   <!-- définissions des onglets -->
 <div class="panel-heading m-0 p-0">
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="width: 100%; background-color: white;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="min-width: 100%; background-color: white;">
     <!--mobile version-->
     <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation">
       <span lang="fr">Veuillez sélectionner une catégorie..</span>
