--- a/html/_/index.html
+++ b/html/_/index.html
@@ -245,7 +245,7 @@ crossorigin=""/>
 <div class="modal-body m-0 p-0 text-size-14px text-justify"> 
   <!-- définissions des onglets -->
 <div class="panel-heading m-0 p-0">
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="min-width: 100%; background-color: white;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="min-width: 100%; background-color: white;">
     <!--mobile version-->
     <button class="navbar-toggler  mx-auto" type="button" data-toggle="collapse" data-target="#navbarForNaturelles" aria-controls="navbarForNaturelles" aria-expanded="false" aria-label="Toggle navigation">
       <span lang="fr">Veuillez sélectionner une catégorie..</span>
@@ -253,7 +253,7 @@ crossorigin=""/>
     </button>
       <!--Desktop version-->
     <h3 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
-      <ul id="ongletsnat" class="navbar-nav nav nav-tabs mx-auto " role="tablist">
+      <ul id="ongletsnat" class="navbar-nav nav nav-tabs mx-auto " role="tablist" style="min-width: 100%; background-color: white;">
         <li class="nav-item">
           <a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">
             <span lang="fr">Présentation Générale</span>
