--- a/html/_/index.html
+++ b/html/_/index.html
@@ -542,34 +542,43 @@ crossorigin=""/>
 
 <!-- Onglet Commentaires-->
 <div class="tab-pane fade" id="tab4info"  role="tabpanel" aria-labelledby="pills-tab4">
-<div class="container-fluid">
-<div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b><b lang="en">Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b></h2>
-    <span id="modalbody-utilisation" class="textitem"></span></span></p>
-  
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b><b lang="en">Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></h2>
-    <span id="modalbody-remarques" class="textitem"></span></span></p>
-</div>
-</div> 
-</div>
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
+      <p>
+        <h2 class="item d-inline text-size-16px">
+          <span lang="fr"><b>Utilisation <sup class="fas fa-question-circle iconetab" title="Types de parfums et d'accords auxquels la matière première peux être associée."></sup> :</b></span>
+          <span lang="en"><b>Uses in perfumery <sup class="fas fa-question-circle iconetab" title="Type of accords and perfumes the raw material can be associated with."></sup> :</b></span>
+        </h2>
+        <span id="modalbody-utilisation" class="textitem"></span>
+      </p>
+      <p>
+        <h2 class="item d-inline text-size-16px">
+          <span lang="fr"><b>Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b></span>
+          <span lang="en"><b>Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></span>
+        </h2>
+        <span id="modalbody-remarques" class="textitem"></span>
+      </p>
+    </div>
+  </div> 
+  </div>
 </div>
 
 
 
-</div>
+</div> <!--fin panel-content-->
 </div> <!--fin panel-body-->
 </div>  <!--fin body-->
 
 <div class="modal-footer">
   <div class="container-fluid">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-  <p class="textitem-footer">
-    <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-    <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-  </p>
-</div>
-</div>
+    <div class="col-12 text-center">
+      <p class="textitem-footer m-0 p-0">
+        <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+        <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+      </p>
+    </div>
+  </div>
 </div> <!--fin footer-->
 
 </div> <!--fin content-->
