--- a/html/_/index.html
+++ b/html/_/index.html
@@ -292,21 +292,21 @@ crossorigin=""/>
     <div class="row">
       <!--1ère colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-4 panelcontent" >
-      <p class="m-0 p-0">
+      <p>
         <h2 class="item d-inline text-size-16px">
           <span lang="fr" style="background-color: blue;"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
           <span lang="en"><b>Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></span>
         </h2>
         <span id="modalbody-tenue" class="textitem"></span>
       </p>
-      <p class="m-0 p-0">
+      <p>
         <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b></span>
           <span lang="en"><b>Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></span>
         </h2>
         <span id="modalbody-price" class="textitem"></span>
       </p>
-      <p class="m-0 p-0">
+      <p>
         <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b></span>
           <span lang="en"><b>Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></span>
@@ -323,6 +323,30 @@ crossorigin=""/>
           <span lang="en"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
         </h1>
         <span id="modalbody-cas" class="textitem"></span>
+        <br>
+        <h2 class="item d-inline text-size-16px">
+          <span lang="fr"><b>N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
+          <span lang="en"><b>EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+        </h2>
+        <span id="modalbody-einecs" class="textitem"></span>
+        <br>
+        <h2 class="item d-inline text-size-16px">
+          <span lang="fr"><b>N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
+          <span lang="en"><b>FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+        </h2>
+        <span id="modalbody-fema" class="textitem"></span>
+        <br>
+        <h2 class="item d-inline text-size-16px">
+          <span lang="fr"><b>N° JECFA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
+          <span lang="en"><b>JECFA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+        </h2>
+        <span id="modalbody-jecfa" class="textitem"></span>
+        <br>
+        <h2 class="item d-inline text-size-16px">
+          <span lang="fr"><b>N° FLAVIS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
+          <span lang="en"><b>FLAVIS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
+        </h2>
+        <span id="modalbody-flavis" class="textitem"></span>
       </p>
       <p>
         <h2 class="item d-inline text-size-16px">
