--- a/html/_/index.html
+++ b/html/_/index.html
@@ -294,7 +294,7 @@ crossorigin=""/>
     <div class="col-xs-12 col-sm-12 col-lg-4 panelcontent" >
       <p>
         <h2 class="item d-inline text-size-16px">
-          <span lang="fr" style="background-color: blue;"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
+          <span lang="fr"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
           <span lang="en"><b>Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></span>
         </h2>
         <span id="modalbody-tenue" class="textitem"></span>
